@@ -1,3 +1,8 @@
+Mon Jan 26 18:06:03 2015  Akinori MUSHA  <knu@iDaemons.org>
+
+	* misc/ruby-electric.el: Import version 2.2.2 from
+	  https://github.com/knu/ruby-electric.el.
+
 Mon Jan 26 11:37:49 2015  Dave Stevens  <dave@crowdlab.com>
 
 	* string.c (str_make_independent_expand): terminate String when
